styles/index.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    --red-color: #8C3830;
    --pink-color: #E1B1A3;
    --lightGray-color: #F4F3EE;
    --gray-color: #D0CDC8;
    --brown-color: #433C38;
    --black-color: #151313;
    --white-color: #FFF;

    --font-header: "Ranchers", sans-serif;
    --font-normal: "Ubuntu", sans-serif;
    --font-hero: "Ranchers", sans-serif;

    
    --weight-normal: 500;
    --weight-bold: 600;
    --weight-bolder:700;

    --title-size: 2.5rem;
    --heading-size: 2.25rem;
    --aboveNormal-size: 1.25rem;
    --normal-size: 1rem;
    --small-size: 0.75rem;
    --smaller-size: 0.5rem;
}



body {
    font-family: var(--font-normal);
    font-weight: var(--weight-normal);
    font-size: var(--normal-size);
}

/*###################
    HEADER
######################*/
.nav-title {
    font-family: var(--font-header);
    font-size: var(--title-size);
    font-weight: var(--weight-bolder);
    letter-spacing: 1px;
    margin-bottom: 0.25em;
    padding-top: 0.5em;

    color: var(--lightGray-color);
}

.nav {
    background: var(--red-color);
    border-radius: 35px;
    text-align: center;
    margin: 0 auto;
    margin-top: 0.5em;
    width: 90%;
}
.nav-links-list {
    list-style: none;
    font-weight: var(--weight-bolder);
    padding-bottom: 0.75em;
}
.nav-links-list a {
    color: var(--lightGray-color);
    text-decoration: none;
}
.nav-links-list li {
    margin-bottom: 0.5em;
}
.nav-links-list a:hover {
    color: var(--pink-color);
    text-decoration: underline;
}
/*###################
    HERO
######################*/
 .hero {
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat(3, 1fr);
 }
 .hero-img {
    grid-column: 1/4;
    grid-row: 1/4;

    align-self: center;
    justify-self: center;

    opacity: .30;
 }
.hero-img img {
    width: 800px;
}

.hero-text {
    grid-column: 1/4;
    grid-row: 1/4;

    text-align: center;

    display: grid;
    grid-template-columns: repeat(3,1fr);
    grid-template-rows: repeat(3, 1fr);

    z-index: 1;

}

.hero-text-title {
    grid-column: 1/4;
    grid-row: 1/3;

    font-size: 3.25rem;
    font-family: var(--font-hero);
    font-weight: var(--weight-bolder);
    color: var(--brown-color);
    
    line-height: 0.95;
    margin-bottom: 0.25em;

    align-self: center;
    justify-self: center;

}
.hero-text-subtitle {
    grid-column: 1/4;
    grid-row: 2/3;
    justify-self: center;
    align-self: center;

    font-family: var(--font-hero);
    font-weight: var(--weight-bold);
    letter-spacing: 1.25px;
    font-size: var(--aboveNormal-size);
    color: var(--brown-color);

    margin-top: 1.25em;
}
.hero-text-btn {
    grid-column: 1/4;
    grid-row: 2/4;
    justify-self: center;
    align-self: center;

    background: var(--red-color);
    color: var(--white-color);
    padding: 0.75em 3em;
    margin-top: 0.5em;
    border-radius: 15px;
    text-decoration: none;

    font-weight: var(--weight-bold);
}
.hero-text-btn:hover {
    color: var(--white-color);
    background: var(--gray-color);
}


/*###################
    FEATURED SECTION
######################*/

.featured-section {
    background: var(--gray-color);
    text-align: center;
    color: var(--brown-color);
    padding: 1.25em;
}
.featured-title {
    font-family: var(--font-header);
    font-size: var(--heading-size);
}
.featured-card {
    margin-top: 1.25em;
}
.featured-card-img img {
    border: 3px solid var(--brown-color);
    border-radius: 15px;
    width: 200px;
}
.featured-card-text {
    font-weight: var(--weight-bold);
}
.featured-card-img img:hover {
    border: 3px solid var(--red-color);
    opacity: 75%;
}

/*###################
    MAIN SECTION
######################*/

/*###################
    QUOTE SECTION
######################*/

/*###################
    BIG TICKET SECTION
######################*/
.bigTicket-section {
    background: var(--red-color);

    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(4, 1fr);
}

 .bigTicket-img {
    grid-column: 3/5;
    grid-row: 1/5;

    background: var(--red-color);
    text-align: center;
    padding: 3em 0;
}


.bigTicket-img img {
    border-radius: 50%;
    border: 5px solid var(--pink-color);
    /* width: 300px; */
    width: 175px;

}

.bigTicket-text {
    color: var(--white-color);
    font-weight: var(--weight-bold);

    grid-column: 1/3;
    grid-row: 1/5;

    text-align: center;

    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(4, 1fr);

    margin-left: 0.5em;
    margin-top: 0.5em;
}


.bigTicket-text-title {
    grid-column: 1/3;
    grid-row: 1/3;
    align-self: start;
    margin-top: 0.5em;

    font-family: var(--font-header);
    font-size: var(--heading-size);
}
.bigTicket-text-price {
    grid-column: 1/3;
    grid-row: 2/3;
    align-self: end;
    justify-self: center;
    margin-bottom: 0.5em;

    font-weight: var(--weight-normal);
} 
.bigTicket-text-subtitle {
    grid-column: 1/3;
    grid-row: 2/4;
    align-self: end;
    margin-bottom: 1em;
}

.bigTicket-text-btn {
    grid-column: 1/3;
    grid-row: 3/5;
    align-self: center;
    justify-self: center;

    background: var(--pink-color);
    color: var(--red-color);
    padding: 0.5em 2em;
    border-radius: 15px;
    text-decoration: none;

    margin-top: 2em;

    font-weight: 700;
}
.bigTicket-text-btn:hover {
    color: var(--white-color);
    background: var(--gray-color);
}

/*###################
    FOOTER
######################*/
.footer {
    display: flex;
    justify-content: space-between;
    padding: 1em 2.5em;
    background: var(--gray-color);
    font-size: var(--small-size);
    font-weight: var(--weight-bolder);
    color: var(--red-color);

    margin-bottom: 1em;
}


@media (max-width:549px) {
    /*prevents horizontal scrolling on moble*/
    html, body {
        overflow-x: hidden;
    }
    body {
        position: relative
    }
    /*#################################*/
}

@media (min-width:550px) {
    /*###################
        HEADER
    ######################*/
    .nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
        width: 97%;
        border-radius: 30px;

    }
    .nav-title {
        margin-top: 0;
        margin-bottom: 0.15em;
        padding-top: 0;
        margin-left: 1.5em;
        letter-spacing: 1px;
        font-size: var(--heading-size);
    }
    .nav-links-list {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        margin: 0 2em;
        padding-bottom: 0;

        list-style-type: none;
    }
    .nav-links-list li {
        margin-bottom: 0;
        margin-left: 1em;
    }

    /*###################
        HERO
    ######################*/

    .hero {
        display: flex;
        justify-content: center;
        align-items: center;

        padding: 1.5em;
    }
    .hero-img  {
        opacity: 1;
        z-index: 0;
        margin-right: 3em;
    }
    .hero-img img {
        margin-left: 5em;
        max-width: 90%;
    }
    .hero-text {
        min-width: 45%;
        margin-right: 5em;
        z-index: 0;
        display: block;
    }
    .hero-text-subtitle {
        margin-bottom: 1.5em;
    }

    /*###################
        FEATURED SECTION
    ######################*/
    .featured-section {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
    }
    .cards {
        display: flex;
        flex-wrap: wrap;

        align-items: center;
        justify-content: space-evenly;

        min-width: 80%;
    }
    .featured-card {
        margin-left: 1em;
    }

    /*###################
        MAIN SECTION
    ######################*/

    /*###################
        QUOTE SECTION
    ######################*/

    /*###################
        BIG TICKET SECTION
    ######################*/
    .bigTicket-section {
        display: flex;
    }

    /*###################
        FOOTER
    ######################*/


}

